feat: add generic result type